# apps/api/src/routes/company.route.ts
@@ -1,14 +1,19 @@
 import { Hono } from 'hono';
 import {
   addCompanyMemberUseCase,
+  createCompanyBranchUseCase,
   createCompanyUseCase,
+  deleteCompanyBranchUseCase,
   deleteCompanyUseCase,
   getCompaniesUseCase,
+  getCompanyBranchesUseCase,
+  getCompanyBranchUseCase,
   getCompanyBySlugUseCase,
   getCompanyMembersUseCase,
   getCompanyUseCase,
   getUserCompaniesUseCase,
   removeCompanyMemberUseCase,
+  updateCompanyBranchUseCase,
   updateCompanyMemberUseCase,
   updateCompanyUseCase,
 } from '@repo/infrastructures/compositions';
@@ -27,6 +32,11 @@ const companyController = new CompanyController(
   removeCompanyMemberUseCase,
   getCompanyMembersUseCase,
   getUserCompaniesUseCase,
+  createCompanyBranchUseCase,
+  updateCompanyBranchUseCase,
+  deleteCompanyBranchUseCase,
+  getCompanyBranchesUseCase,
+  getCompanyBranchUseCase,
 );
 
 const companyRoutes = new Hono<AuthContext>();
@@ -46,6 +56,13 @@ companyRoutes.get('/:companyId/members', companyController.getMembers);
 companyRoutes.post('/members', companyController.addMember);
 companyRoutes.put('/members/:id', companyController.updateMember);
 companyRoutes.delete('/members/:id', companyController.removeMember);
+
+// Company Branches
+companyRoutes.get('/:companyId/branches', companyController.getBranches);
+companyRoutes.post('/branches', companyController.createBranch);
+companyRoutes.get('/branches/:id', companyController.getBranch);
+companyRoutes.put('/branches/:id', companyController.updateBranch);
+companyRoutes.delete('/branches/:id', companyController.deleteBranch);
 
 // Switch Active Company
 companyRoutes.post('/:id/switch', companyController.switchActiveCompany);
