# packages/infrastructures/src/compositions/applications/company/index.ts
@@ -1,2 +1,3 @@
 export * from './company.application';
+export * from './company-branch.application';
 export * from './company-member.application';
